# IndieStudio

./: CMakeLists.txt  README.md  project.sh
src/: Main.cpp
src/abstract/: ACharacter.cpp  ACharacter.hpp  AGameObject.cpp  AGameObject.hpp  AObject.cpp  AObject.hpp  ASFX.cpp  ASFX.hpp  AScene.cpp  AScene.hpp  AUI.cpp  AUI.hpp  AUIObject.cpp  AUIObject.hpp
src/class/: Block.cpp  Block.hpp  Bomb.cpp  Bomb.hpp  Button.cpp  Button.hpp  Conso.cpp  Conso.hpp  Core.cpp  Core.hpp  EventHandler.cpp  EventHandler.hpp  IA.cpp  IA.hpp  Music.cpp  Music.hpp  Player.cpp  Player.hpp  Sound.cpp  Sound.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
src/event/: GameEvent.cpp  GameEvent.hpp
src/properties/: Dropable.cpp  Dropable.hpp  Movable.cpp  Movable.hpp
src/scene/: Credits.cpp  Credits.hpp  Game.cpp  Game.hpp  Intro.cpp  Intro.hpp  Ladder.cpp  Ladder.hpp  Menu.cpp  Menu.hpp  Settings.cpp  Settings.hpp  SplashScreen.cpp  SplashScreen.hpp
src/utils/: Errors.cpp  Errors.hpp  Using.hpp
